# fuck-wjx

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  README_EN.md  SurveyController.py  SurveyController.spec  SurveyController_macOS.spec  build_macos.sh  config.json  config.py  fuck-wjx-cli.py  fuck-wjx-macos.spec  fuck-wjx.code-workspace  fuck-wjx.py  fuck-wjx.spec  full_simulation_mode.py  icon.icns  ips.txt  log_utils.py  pyproject.toml  random_ip.py  requirements.txt  rthook_pyside6.py  rthook_pyside6_macos.py  runtime_hook_zbar.py  test_deadcode.py  test_imports.py  test_wjx_deadcode.py  test_wjx_imports.py  version.py
.pytest_tmp_async_runtime_loop_large/: test_async_browser_owner_pool_current  test_close_session_releases_prcurrent  test_handle_device_quota_limitcurrent  test_handle_proxy_connection_ecurrent  test_load_survey_or_record_faicurrent  test_open_session_sets_driver_current  test_prepare_round_context_fincurrent  test_prepare_round_context_marcurrent  test_prepare_round_context_retcurrent  test_prepare_round_context_stocurrent  test_prepare_round_context_waicurrent  test_resolve_dispatch_delay_securrent  test_route_runtime_resource_pacurrent  test_run_aborted_finalize_breacurrent  test_run_airuntime_error_releacurrent  test_run_browser_startup_errorcurrent  test_run_finishes_cleanly_whencurrent  test_run_generic_exception_reccurrent  test_run_marks_thread_completecurrent  test_run_no_submit_path_skips_current  test_run_proxy_connection_errocurrent  test_run_requeues_when_joint_pcurrent  (+7 more)
CI/: __init__.py  python_ci.py  (+4 more)
(+768 files in other folders)
