[project]
name = "surveycontroller"
version = "3.2.0"
description = "SurveyController desktop application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "httpx>=0.27,<1",
    "openpyxl",
    "packaging",
    "PySide6==6.11.1",
    "PySide6-Fluent-Widgets==1.11.2",
    "velopack",
    "zxing-cpp",
]

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-qt>=4.5.0",
    "ruff",
]
build = [
    "nuitka>=2.7.11,<3",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
line-length = 100
